src/Styles/settings.css
/* ... */
.note-toolbar-setting-command-indicator {
    padding: 2px;
    & svg {
        height: var(--font-ui-small);
        vertical-align: middle;
    }
}

.note-toolbar-setting-item-preview-edit-mobile {
    display: flex;
    gap: 0 0.5em;
    justify-content: space-between;
    width: 100%;
}

.note-toolbar-setting-state-active svg {
    color: var(--interactive-accent);
}

.note-toolbar-setting-item-preview-icon:empty {
    display: none;
}

.note-toolbar-setting-item-preview-empty,
.note-toolbar-setting-item-preview-tooltip {
    color: var(--color-base-60);
    font-style: italic;
}

.note-toolbar-setting-toolbar-list-preview-item {
    align-items: center;
    display: flex;
    gap: 4px;
    line-height: var(--line-height-normal);
    & span {
        white-space: nowrap;
        &.note-toolbar-setting-group-preview {
            border-radius: 4px;
            border: solid 1px var(--background-modifier-border);
            font-variant: small-caps;
            line-height: var(--line-height-tight);
            text-transform: lowercase;
            padding: 0px 8px;
        }
    }
}

.note-toolbar-setting-script-preview {
    background-color: var(--background-secondary);
    display: flex;
    font-family: var(--font-monospace);
    font-size: var(--font-ui-small);
    max-width: 100%;
    overflow-x: scroll;
    padding: var(--size-4-2) var(--size-4-3);
    white-space: normal;
}

.note-toolbar-setting-empty-message {
    align-items: center;
    color: var(--text-muted);
    display: flex;
    font-style: italic;
    height: var(--input-height);
    justify-content: center;
    .note-toolbar-setting-item-styles & {
        padding-bottom: 0;    
    }
    .note-toolbar-setting-items-list-container & {
        margin: auto;
    }
    .note-toolbar-setting-mappings-container & {
        padding-bottom: 1em;
        justify-content: left;
    }
}

.note-toolbar-setting-error-message {
    color: var(--text-error);
    padding-bottom: 1em;
}

input[type="search"].note-toolbar-setting-error,
input[type="text"].note-toolbar-setting-error,
.note-toolbar-setting-error textarea {
    box-shadow: 0 0 0 1px var(--text-error);
}

.note-toolbar-setting-error {
    &.note-toolbar-setting-item-preview {
        border-radius: var(--radius-m);
        box-shadow: 0 0 0 1px var(--text-error);
        animation-duration: 1s, 1s;
        animation-delay: 0s, .1s;
        animation-name: note-toolbar-setting-error-grows, note-toolbar-setting-error-shrinks;
        animation-timing-function: cubic-bezier(.2,0,0,1), cubic-bezier(.2,0,0,1);
        margin: 2px;
        .is-mobile & {
            padding-inline-start: 0.5em;
        }
    }
    & input[type="text"], & input[type="search"] {
        box-shadow: 0 0 0 1px var(--text-error);
    }
}

@keyframes note-toolbar-setting-error-grows {
    0% {
      box-shadow: 0 0 0 1px var(--text-error);
    }
    100% {
        box-shadow: 0 0 0 3px var(--text-error);
    }
}
  
@keyframes note-toolbar-setting-error-shrinks {
    0% {
        box-shadow: 0 0 0 3px var(--text-error);
    }
    100% {
        box-shadow: 0 0 0 1px var(--text-error);
    }
}

.note-toolbar-setting-item-full-width {
    align-items: flex-start;
    flex-direction: column;
    flex-grow: 1;
    gap: var(--size-4-2);
    & .setting-item-control {
        width: 100%;
        & input[type="text"] {
            width: 100%;
        }
    }
}

.note-toolbar-setting-item-full-width-phone {
    & .setting-item-control > div {
        .is-mobile & {
            width: 100%;
        }
    }
}

.note-toolbar-setting-items-header {
    border-bottom: 1px solid var(--background-modifier-border);
    border-width: 0 0 var(--border-width) 0;
    border-radius: 0%;
    padding-bottom: 1em;
    margin-bottom: 1em;
}

.note-toolbar-setting-item-heading-top-spacing {
    padding-top: 1.5em;
}

.note-toolbar-setting-item-full-control-phone {
    .is-phone & {
        width: 100%;
        & .setting-item-control {
            width: 100%;
        }
    }
}
/* ... */

