style: fix: settings: code wrapping in toolbar list

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -778,6 +778,10 @@
             padding: 0px 8px;
         }
     }
+    & .note-toolbar-setting-item-preview-code {
+        white-space: normal;
+        overflow-wrap: anywhere;
+    }
 }
 
 .note-toolbar-setting-script-preview {
